force-app/main/default/objects/MasterConfigs__c/MasterConfigs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MasterConfigs</label>
</CustomObject>