force-app/main/default/objects/MasterConfigs__c/fields/Asociados__c.field-meta.xml
<CustomField>
    <fullName>Asociados__c</fullName>
    <label>Asociados</label>
    <type>DateTime</type>
</CustomField>