force-app/main/default/objects/MasterConfigs__c/fields/Clausulas_Temporales__c.field-meta.xml
<CustomField>
    <fullName>Clausulas_Temporales__c</fullName>
    <label>Clausulas Temporales</label>
    <type>DateTime</type>
</CustomField>