force-app/main/default/objects/MasterConfigs__c/fields/Delegaciones__c.field-meta.xml
<CustomField>
    <fullName>Delegaciones__c</fullName>
    <label>Delegaciones</label>
    <type>DateTime</type>
</CustomField>