force-app/main/default/objects/MasterConfigs__c/fields/Domicilios__c.field-meta.xml
<CustomField>
    <fullName>Domicilios__c</fullName>
    <label>Domicilios</label>
    <type>DateTime</type>
</CustomField>