force-app/main/default/objects/MasterConfigs__c/fields/Efectores__c.field-meta.xml
<CustomField>
    <fullName>Efectores__c</fullName>
    <label>Efectores</label>
    <type>DateTime</type>
</CustomField>