force-app/main/default/objects/MasterConfigs__c/fields/Empresas__c.field-meta.xml
<CustomField>
    <fullName>Empresas__c</fullName>
    <label>Empresas</label>
    <type>DateTime</type>
</CustomField>