force-app/main/default/objects/MasterConfigs__c/fields/Localidades__c.field-meta.xml
<CustomField>
    <fullName>Localidades__c</fullName>
    <label>Localidades</label>
    <type>DateTime</type>
</CustomField>