force-app/main/default/objects/MasterConfigs__c/fields/Medicamentos__c.field-meta.xml
<CustomField>
    <fullName>Medicamentos__c</fullName>
    <label>Medicamentos</label>
    <type>DateTime</type>
</CustomField>