force-app/main/default/objects/MasterConfigs__c/fields/Obras_Sociales__c.field-meta.xml
<CustomField>
    <fullName>Obras_Sociales__c</fullName>
    <label>Obras Sociales</label>
    <type>DateTime</type>
</CustomField>