force-app/main/default/objects/MasterConfigs__c/fields/Telefonos__c.field-meta.xml
<CustomField>
    <fullName>Telefonos__c</fullName>
    <label>Telefonos</label>
    <type>DateTime</type>
</CustomField>